Added Analysis page in which a machine learning model accept text and return a sentiment analysis result.

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,5 +21,27 @@
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
+
+    <div class="d-flex p-2">
+        <div class="card shadow p-4 rounded-4  mx-auto" style="width: 100%; max-width: 400px;">
+            <h3 class="text-center mb-4">Login</h3>
+            <form method="post">
+                <div class="mb-3">
+                    {{ form.username.label(class="form-label") }}<br>
+                    {{ form.username(size=32, class="form-control", id="username", aria_describedby="usernameHelp") }}<br>
+                    <div id="usernameHelp" class="form-text">We'll never share your information with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                    {{ form.password.label(class="form-label") }}<br>
+                    {{ form.password(size=32, class="form-control", id="password") }}<br>
+                </div>
+                <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </div>
     <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
 {% endblock %}
