--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,9 @@
                   <li class="nav-item">
                     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('analysis') }}">Analysis</a>
+                  </li>
                 </ul>
               </div>
             </div>
