--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,25 +1,38 @@
 {% extends "base.html" %}
 
+{% block title %}Sign In{% endblock %}
+
 {% block content %}
-    <h1>Sign In</h1>
-    <form action="" method="post" novalidate>
+<div class="container mt-5" style="max-width: 500px;">
+    <h2 class="text-center mb-4">Sign In</h2>
+
+    <form method="POST" action="{{ url_for('login') }}">
         {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: rgb(57, 16, 221);">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
+
+        <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            {{ form.username(class_="form-control", placeholder="Enter username") }}
+        </div>
+
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            {{ form.password(class_="form-control", placeholder="Enter password") }}
+        </div>
+
+        <div class="form-check mb-3">
+            {{ form.remember_me(class_="form-check-input") }}
+            <label class="form-check-label" for="remember_me">
+                Remember Me
+            </label>
+        </div>
+
+        <div class="d-grid">
+            {{ form.submit(class_="btn btn-primary") }}
+        </div>
     </form>
-    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+
+    <div class="mt-3 text-center">
+        <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a>.</p>
+    </div>
+</div>
 {% endblock %}
