--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,37 +1,41 @@
 {% extends "base.html" %}
 
+{% block title %}Register{% endblock %}
+
 {% block content %}
-    <h1>Register</h1>
-    <form action="" method="post">
+<div class="container mt-5" style="max-width: 500px;">
+    <h2 class="text-center mb-4">Register</h2>
+
+    <form method="POST" action="{{ url_for('register') }}">
         {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.email.label }}<br>
-            {{ form.email(size=64) }}<br>
-            {% for error in form.email.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password2.label }}<br>
-            {{ form.password2(size=32) }}<br>
-            {% for error in form.password2.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
+
+        <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            {{ form.username(class_="form-control", placeholder="Choose a username") }}
+        </div>
+
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            {{ form.email(class_="form-control", placeholder="Enter your email") }}
+        </div>
+
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            {{ form.password(class_="form-control", placeholder="Enter a password") }}
+        </div>
+
+        <div class="mb-3">
+            <label for="password2" class="form-label">Repeat Password</label>
+            {{ form.password2(class_="form-control", placeholder="Repeat your password") }}
+        </div>
+
+        <div class="d-grid">
+            {{ form.submit(class_="btn btn-success") }}
+        </div>
     </form>
+
+    <div class="mt-3 text-center">
+        <p>Already have an account? <a href="{{ url_for('login') }}">Sign in here</a>.</p>
+    </div>
+</div>
 {% endblock %}
