Minor changes to the homepage and index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
         "Portugal Will Ask EU to Use Escape Clause for Defense Spending",
         "Bitcoin Surges as US Seeks to Ease Trade, Fed Tensions",
         "Short Selling of SK Hynix Surges to Record on Trade, AI Concerns",
-        "California’s Fuel Industry Is Shrinking"
+        "California's Fuel Industry Is Shrinking"
     ];
 
     let index = 0;
