Add share.html template and update routes.py to handle sharing functionality

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -52,7 +52,8 @@
                     </li>
                     <!-- Other Pages -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">My Share</a>
+                        <!-- <a class="nav-link" href="#">My Share</a> -->
+                        <a class="nav-link" href="{{ url_for('share') }}">My Share</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('login') }}">Login</a>
