--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
                         </a>
                         <ul class="dropdown-menu text-center" aria-labelledby="uploadInputDropdown">
                             <li><a class="dropdown-item" href="{{ url_for('upload') }}">Upload File</a></li>
-                            <li><a class="dropdown-item" href="#">Input Text</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('upload') }}">Input Text</a></li>
                         </ul>
                     </li>
 
