--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -38,8 +38,8 @@
                 intent, and comprehend context. 
             </p>
             <ul>
-                <li>Detecting whether a product review is positive or negative</li>
-                <li>Analyzing news article tone</li>
+                <li>Any text</li>
+                <li>Most information are text</li>
                 <li>Understanding emotional tone in user feedback or social media posts</li>
             </ul>
 
