--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -40,7 +40,7 @@
             <ul>
                 <li>Any text</li>
                 <li>Most information are text</li>
-                <li>Understanding emotional tone in user feedback or social media posts</li>
+                <li>Models awailable on Hugging Face</li>
             </ul>
 
             <!-- 功能 -->
