--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -56,7 +56,11 @@
                         <a class="nav-link" href="{{ url_for('share') }}">My Share</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                        {% if current_user.is_authenticated %}
+                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        {% else %}
+                            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                        {% endif %}
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('register') }}">Register</a>
