--- a/app/templates/share.html
+++ b/app/templates/share.html
@@ -20,6 +20,39 @@
             </div>
         </div>
 
+       
+        <div>
+            <canvas id="myChart" style="max-width: 600px; max-height: 400px;"></canvas>
+        </div>
+        
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        
+        <script>
+            const ctx = document.getElementById('myChart');
+        
+            new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: ['Negative', 'Neutral', 'Positive'],
+                    datasets: [{
+                    label: 'The Number of Samples',
+                    data: [1,3,5], // Example data],
+                    borderWidth: 1
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+        </script>
+       
+
+
         <!-- 示例卡片2 -->
         <div class="col">
             <div class="card h-100 shadow-sm">
