--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,6 +65,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('register') }}">Register</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('analysis') }}">Analysis</a>
+                    </li>
                 </ul>
             </div>
         </div>
