--- a/app/static/css/homepage.css
+++ b/app/static/css/homepage.css
@@ -101,22 +101,13 @@
     margin-top: 15px;
 }
 
-/* 按钮自定义样式 */
-.custom-btn {
+/* 光标标语 */
+#cursor {
+    display: inline-block;
+    width: 1px;
     background-color: white;
-    color: black;
-    border: none;
-    padding: 10px 20px;
-    font-size: 1.1rem;
-    border-radius: 8px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-/* 鼠标悬浮时变灰色 */
-.custom-btn:hover {
-    background-color: #e0e0e0;
-    /* 灰色 */
-    color: black;
+    animation: blink 1s steps(2, start) infinite;
+    margin-left: 2px;
 }
 
 /* 核心功能区：导航区+解释 */
@@ -152,7 +143,7 @@
 
 .content {
     flex: 1;
-    padding: 40px;
+    padding: 10px;
 }
 
 h2 {
