--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,8 +45,7 @@
                             Result
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">View Result</a></li>
-                            <li><a class="dropdown-item" href="#">View Histories</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('history') }}">View Histories</a></li>
                         </ul>
                     </li>
 
@@ -108,6 +107,12 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{ url_for('static', filename='js/typing.js') }}"></script>
+
+    {% block footer %}
+    <footer class="bg-dark text-white text-center p-3">
+        <p>© 2025 NewsSentiment | Contact us | Privacy Policy</p>
+    </footer>
+    {% endblock %}
 
 </body>
 
