--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,6 +49,12 @@
                         </ul>
                     </li>
 
+                    <!-- User Profile -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
+                    </li>
+
+
                     <!-- My Share -->
                     <li class="nav-item">
                         <a class="nav-link" href="#">My Share</a>
