--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,10 +63,11 @@
                     <!-- Logout -->
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-                    </li>
-
+                      </li>
                     {% else %}
-                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                      <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                      </li>
                     {% endif %}
                   </li>
                   <li class="nav-item">
