--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -10,9 +10,13 @@
     {{ form.hidden_tag() }}
 
     <div class="form-group">
+      <label for="post_title">News Title</label>
+      <input type="text" class="form-control" id="post_title" name="post_title" placeholder="Enter the news title">
+    
       <label for="news_content">Please enter the news</label>
       {{ form.news_content(class_="form-control", rows=8, placeholder="Please paste the news content") }}
     </div>
+    
 
     <div class="mt-3">
       {{ form.submit(class_="btn btn-primary") }}
