--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -1,19 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="text-center">Text Sentiment Analysing</h1>
-    <form class="p-3 text-center" action="" method="post">
-        <div class="form-group">
-            <label for="textInput">Enter text or paste an article below:</label>
-            <textarea id="textInput" name="textInput" class="form-control" rows="6" placeholder="Type your text here..."></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary mt-3">Analyze</button>
-    </form>
-    {% if result %}
-        <div class="alert alert-info mt-3">
-            <h4>Analysis Result:</h4>
-            <p>{{ result }}</p>
-        </div>
-    {% endif %}
+<h1 class="text-center">Text Sentiment Analysing</h1>
+<form class="p-3 text-center" action="" method="post">
+    <div class="form-group">
+        <label for="textInput">Enter text or paste an article below:</label>
+        <textarea id="textInput" name="textInput" class="form-control" rows="6"
+            placeholder="Type your text here..."></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary mt-3">Analyze</button>
+</form>
 
+{% if result %}
+<div class="alert alert-info mt-3">
+    <h4>Sentiment Analysis Result:</h4>
+    <p>{{ result }}</p>
+</div>
+{% endif %}
+
+{% if emotion_result %}
+<div class="alert alert-success mt-3">
+    <h4>Emotion Analysis Result:</h4>
+    <p>{{ emotion_result }}</p>
+</div>
+{% endif %}
 {% endblock %}
